--- a/Lab1_THKTPM/appsettings.json
+++ b/Lab1_THKTPM/appsettings.json
@@ -1,12 +1,25 @@
 {
-  "AppSettings": {
-    "ApplicationTitle": "Automobile Service Center Application"
-  },
 
+  "AppSettings": {
+    "ApplicationTitle": "Automobile Service Center Application",
+    "AdminEmail": "vanuhudsp@gmail.com",
+    "AdminName": "Admin",
+    "AdminPassword": "P@ssw0rd",
+    "EngineerEmail": "huutvdm@gmail.com",
+    "EngineerName": "Engineer",
+    "EngineerPassword": "P@ssw0rd",
+    "Roles": "Admin,User,Engineer",
+    "SMTPServer": "smtp.gmail.com",
+    "SMTPPort": "587",
+    "SMTPAccount": "huutvdmu2@gmail.com",
+    "SMTPPassword": "mjdgknralgzxwcvx"
+  },
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Lab1_THKTPM-b4fb1090-ee65-4913-bd44-8901c911d406;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=LAPTOP-SGK3EG8L;Initial Catalog=ASC; Integrated Security=True;Trust Server Certificate=True"
+
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
