Remove sensitive data

--- a/Lab1_THKTPM/appsettings.json
+++ b/Lab1_THKTPM/appsettings.json
@@ -17,6 +17,12 @@
     "DefaultConnection": "Data Source=LAPTOP-SGK3EG8L;Initial Catalog=ASC;Integrated Security=True;Trust Server Certificate=True",
     "Lab1_THKTPMContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Lab1_THKTPM;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "625070289354-v5au186ghm6hu7bcjuo0advbaosnm6kd.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
