--- a/Lab1_THKTPM/appsettings.json
+++ b/Lab1_THKTPM/appsettings.json
@@ -19,8 +19,8 @@
   },
   "Authentication": {
     "Google": {
-      "ClientId": "",
-      "ClientSecret": ""
+      "ClientId": "625070289354-v5au186ghm6hu7bcjuo0advbaosnm6kd.apps.googleusercontent.com",
+      "ClientSecret": "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"
     }
   },
   "Logging": {
