--- a/Lab1_THKTPM/appsettings.json
+++ b/Lab1_THKTPM/appsettings.json
@@ -19,10 +19,11 @@
   },
   "Authentication": {
     "Google": {
-      "ClientId": "625070289354-v5au186ghm6hu7bcjuo0advbaosnm6kd.apps.googleusercontent.com",
-      "ClientSecret": "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"
+      "ClientId": "your-client-id-here",
+      "ClientSecret": "your-client-secret-here"
     }
   },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
