--- a/Lab1_THKTPM/Lab1_THKTPM.csproj
+++ b/Lab1_THKTPM/Lab1_THKTPM.csproj
@@ -8,6 +8,9 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="10.1.1" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+		<PackageReference Include="EPPlus" Version="8.0.1" />
 		<PackageReference Include="MailKit" Version="4.11.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="8.0.4" />
 		<PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="8.0.11" />
@@ -29,6 +32,7 @@
 
 	<ItemGroup>
 	  <Folder Include="Areas\Accounts\Data\" />
+	  <Folder Include="Areas\Configuration\Data\" />
 	  <Folder Include="Areas\ServiceRequests\Controllers\" />
 	  <Folder Include="Areas\ServiceRequests\Data\" />
 	  <Folder Include="Areas\ServiceRequests\Models\" />
